<resources>
    <string name="app_name">SmartTraffic</string>
    <string name="title_activity_mine">个人中心</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>

    <string name="head">联想智能交通系统</string>
    <string name="nav_account">个人</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于</string>
    <string name="click_login">点击头像登录</string>
    <string name="user_login">用户登录</string>
    <string name="net_setting">网络设置</string>
    <string name="no_data">无数据</string>
    <string name="auto_login">自动登陆</string>
    <string name="remember_pwd">记住密码</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="error_login_empty">用户名不能为空</string>
    <string name="error_pwd_empty">密码不能为空</string>
    <string name="item1">第一题</string>
    <string name="item2">第二题</string>
    <string name="item3">第三题</string>
    <string name="item4">第四题</string>
    <string name="item5">第五题</string>
    <string name="item6">第六题</string>
    <string name="item7">第七题</string>
    <string name="item8">第八题</string>
    <string name="item9">第九题</string>
    <string name="item10">第十题</string>
    <string name="item11">第十一题</string>
    <string name="item12">第十二题</string>
    <string name="item12_1">改后第十二题</string>
    <string name="item13">第十三题</string>
    <string name="item15">第十五题</string>
    <string name="item16">第十六题</string>
    <string name="item20">第二十题</string>
    <string name="item21">第二十一题</string>
    <string name="item22">第二十二题</string>
    <string name="item23">第二十三题</string>
    <string name="item25">第二十五题</string>
    <string name="item27">第二十七题</string>
    <string name="item28">第二十八题</string>
    <string name="item30">第三十题</string>
    <string name="item31">第三十一题</string>
    <string name="item34">第三十四题</string>
    <string name="item35">第三十五题</string>
    <string name="item36">第三十六题</string>
    <string name="item37">第三十七题</string>
    <string name="item46">第四十六题</string>
    <string name="title_item_main">Tab</string>
    <string name="main_home">主页面</string>
    <string name="creative_design">创意设计</string>
    <string name="title_main">主页</string>
    <!--tab选项名称-->
    <string-array name="tab_names">
        <item>第一页</item>
        <item>第二页</item>
        <item>第三页</item>
    </string-array>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
