<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/screen"
        android:checkableBehavior="single">
        <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/nav_account"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/other">
        <item
            android:id="@+id/item_1"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/item1"/>
        <item
            android:id="@+id/item_2"
            android:icon="@drawable/ic_history_gray_24dp"
            android:title="@string/item2"/>
        <item
            android:id="@+id/item_3"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item3"/>
        <item
            android:id="@+id/item_4"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item4"/>
        <item
            android:id="@+id/item_5"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item5"/>
        <item
            android:id="@+id/item_6"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item6"/>
        <item
            android:id="@+id/item_7"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item7"/>
        <item
            android:id="@+id/item_8"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item8"/>
        <item
            android:id="@+id/item_9"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item9"/>
        <item
            android:id="@+id/item_10"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item10"/>
        <item
            android:id="@+id/item_11"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item11"/>
        <item
            android:id="@+id/item_12"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item12"/>
        <item
            android:id="@+id/item_12_1"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item12_1"/>
        <item
            android:id="@+id/item_13"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item13"/>
        <item
            android:id="@+id/item_15"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item15"/>
        <item
            android:id="@+id/item_16"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item16"/>
        <item
            android:id="@+id/item_20"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item20"/>
        <item
            android:id="@+id/item_21"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item21"/>
        <item
            android:id="@+id/item_22"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item22"/>
        <item
            android:id="@+id/item_23"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item22"/>
        <item
            android:id="@+id/item_25"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item25"/>
        <item
            android:id="@+id/item_27"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item27"/>
        <item
            android:id="@+id/item_28"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item28"/>
        <item
            android:id="@+id/item_30"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item30"/>
        <item
            android:id="@+id/item_31"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item31"/>
        <item
            android:id="@+id/item_34"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item34"/>
        <item
            android:id="@+id/item_35"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item35"/>
        <item
            android:id="@+id/item_36"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item36"/>
        <item
            android:id="@+id/item_37"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item37"/>
        <item
            android:id="@+id/item_46"
            android:icon="@drawable/ic_app_management_gray_24"
            android:title="@string/item46"/>
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group_manage">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/set"
            android:title="@string/nav_setting"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_gray_24dp"
            android:title="@string/nav_about"/>
    </group>

</menu>